# LMS-Backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  aws_ubuntu_ed25519.pem  docker-compose.yml  dump.rdb  project_models.dot  pyproject.toml  pytest.ini  requirements.txt  schema.json  script.py
.github/workflows/: cd.yml  ci.yml
src/api/: urls.py
src/api/assignments/: urls.py  views.py
src/api/assignments/serializers/: __init__.py  reassign_task_to_user_serializer.py  task_read_light_serializer.py  task_read_serializer.py  task_write_serializers.py
src/api/chat/: routing.py  urls.py  views.py
src/api/chat/consumers/: __init__.py  chat_consumer.py
src/api/chat/serializers/: __init__.py
src/api/courses/: urls.py  views.py
src/api/courses/serializers/: __init__.py
src/api/grades/: urls.py  views.py
src/api/grades/serializers/: __init__.py
src/api/notifications/: urls.py  views.py
src/api/notifications/consumers/: __init__.py  notifications.py
src/api/notifications/serializers/: __init__.py  notification_read_serializer.py  notification_write_serializer.py
src/api/submissions/: urls.py  views.py
src/api/submissions/serializers/: __init__.py
src/api/users/: urls.py
src/api/users/serializers/: __init__.py
src/api/users/views/: __init__.py  admin.py  user.py
src/apps/assignments/: admin.py  apps.py  filters.py
src/apps/assignments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_remove_task_video_url_task_file_task_image_and_more.py  0005_alter_task_description.py  0006_task_allow_resubmitting_task_and_more.py  0007_alter_task_options.py
src/apps/assignments/models/: manager.py  task.py
src/apps/chat/: admin.py
src/apps/chat/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
src/apps/chat/models/: chat_room.py  message.py
src/apps/common/middleware/: __init__.py  cache_user_groups_middleware.py  jwt_get_user_middleware.py
src/apps/common/permissions/: __init__.py  course_permissions.py  group_permissions.py
src/apps/common/utils/: __init__.py  notifications.py  other.py  validators.py
src/apps/common/validators/: __init__.py  validate_weekdays.py
src/apps/courses/: admin.py  apps.py
src/apps/courses/filters/: __init__.py  course.py  group.py
src/apps/courses/migrations/: 0001_initial.py  0002_initial.py  0003_coursegroup_is_active.py  0004_coursegroup_teachers_alter_coursegroup_teacher.py  0005_alter_courseenrollment_unique_together_and_more.py  0006_course_allow_teachers_to_manage_tasks.py  0007_remove_coursegroup_teacher.py
src/apps/courses/models/: __init__.py
src/apps/grades/: admin.py  apps.py
src/apps/grades/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_grade_feedback_text.py
src/apps/grades/models/: grade.py
src/apps/logs/: admin.py  apps.py  handlers.py
src/apps/logs/migrations/: 0001_initial.py
src/apps/notifications/: admin.py  apps.py  signals.py
src/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
src/apps/notifications/models/: notifications.py
src/apps/submissions/: admin.py  apps.py  service.py
src/apps/submissions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_answerfile_options_answerfile_content_type_and_more.py
src/apps/submissions/models/: __init__.py  answers.py  files.py
src/apps/users/: admin.py  apps.py  pagination.py
src/apps/users/auth/: otp.py
src/apps/users/filters/: user_filter.py
src/core/: admin.py  asgi.py  celery.py  settings.py  urls.py
(+126 files in other folders)
